--- a/index.html
+++ b/index.html
@@ -64,9 +64,28 @@
     <div class="landing">
         <div class="home-wrap">
             <div class="home-inner">
-
             </div>
         </div>
+    </div>
+
+    <div class="caption center-block text-center">
+        <div class="os-animation" data-animation="bounceInUp" data-delay=".4s">
+            <h1>Welcome to our website</h1>
+        </div>
+        <div class="os-animation" data-animation="bounceInUp" data-delay=".6s">
+            <h3>Animated Bootstrap Theme</h3>
+        </div>
+        <div class="os-animation" data-animation="bounceInUp" data-delay=".8s">
+            <a class="btn btn-outline-light btn-lg" href="#feature">Get Started</a>
+        </div>
+    </div>
+
+    <div>
+        <a class="down-arrow" href="#feature">
+            <div class="arrow bounce d-none d-md-block">
+                <i class="fas fa-angle-down" aria-hidden="true"></i>
+            </div>
+        </a>
     </div>
     <!-- End Home Section -->
 
