add header in feature class

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             <h3>Animated Bootstrap Theme</h3>
         </div>
         <div class="os-animation" data-animation="bounceInUp" data-delay=".8s">
-            <a class="btn btn-outline-light btn-lg" href="#feature">Get Started</a>
+            <a class="btn btn-outline-light btn-lg" href="#features">Get Started</a>
         </div>
     </div>
 
     <div>
-        <a class="down-arrow" href="#feature">
+        <a class="down-arrow" href="#features">
             <div class="arrow bounce d-none d-md-block">
                 <i class="fas fa-angle-down" aria-hidden="true"></i>
             </div>
@@ -91,6 +91,19 @@
 
     <!-- Start Features Section -->
     <div id="features" class="offset">
+
+        <div class="so-animation" data-animation="fadeInUp">
+            <div class="narrow text-center">
+                <div class="col-12">
+                    <h1>Nuno Responsive Bootstrap Theme</h1>
+                    <p class="lead">Bootstrap is an open-source front-end library
+                    with HTML and CSS based designs. This website is built with
+                    HTML5, CSS3 and Bootstrap 4.</p>
+                    <a href="#contact" class="btn btn-secondary btn-sm">Request a qoute</a>
+                    <a href="#portfolio" class="btn btn-turquoise btn-sm">Request a qoute</a>
+                </div>
+            </div>
+        </div>
 
     </div>
     <!-- End Features Section -->
@@ -130,7 +143,7 @@
 
     </div>
     <!-- End Contact Section -->
-
+    <br><br><br><br><br><br><br><br><br><br><br>
     <!-- Scripts start -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
