style header of features section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- Start Features Section -->
     <div id="features" class="offset">
 
-        <div class="so-animation" data-animation="fadeInUp">
+        <div class="os-animation" data-animation="fadeInUp">
             <div class="narrow text-center">
                 <div class="col-12">
                     <h1>Nuno Responsive Bootstrap Theme</h1>
@@ -100,7 +100,7 @@
                     with HTML and CSS based designs. This website is built with
                     HTML5, CSS3 and Bootstrap 4.</p>
                     <a href="#contact" class="btn btn-secondary btn-sm">Request a qoute</a>
-                    <a href="#portfolio" class="btn btn-turquoise btn-sm">Request a qoute</a>
+                    <a href="#portfolio" class="btn btn-turquoise btn-sm">See our portfolio</a>
                 </div>
             </div>
         </div>
