--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
             </div>
         </div>
 
+        <div class="jumbotron">
+            <div class="narrow">
+                <div class="os-animation" data-animation="fadeInUp">
+                    <h3 class="heading">Features</h3>
+                    <div class="heading-underline"></div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <!-- End Features Section -->
 
