--- a/index.html
+++ b/index.html
@@ -111,6 +111,89 @@
                     <h3 class="heading">Features</h3>
                     <div class="heading-underline"></div>
                 </div>
+
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="os-animation" data-animation="fadeInLeft">
+                            <div class="feature">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fa fa-circle"></i>
+                                    <i class="fas fa-mobile-alt fa-inverse" data-fa-transform="shrink-6"></i>
+                                </span>
+                                <h3>Mobile Friendly</h3>
+                                <p>Nuno features a mobie friendly, responsive first website layout using Bootstrap.</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-sm-6 col-md-4">
+                        <div class="os-animation" data-animation="fadeInUp">
+                            <div class="feature">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fa fa-circle"></i>
+                                    <i class="fas fa-desktop fa-inverse" data-fa-transform="shrink-8 left-1"></i>
+                                </span>
+                                <h3>Full Screen Landing</h3>
+                                <p>Using Bootstrap, the Nuno theme features a full screen carousel landing page.</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-sm-6 col-md-4">
+                        <div class="os-animation" data-animation="fadeInRight">
+                            <div class="feature">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fa fa-circle"></i>
+                                    <i class="fas fa-play fa-inverse" data-fa-transform="shrink-.5 right-1.3"></i>
+                                </span>
+                                <h3>Custom Animation</h3>
+                                <p>Animate.css and Waypoints.js allow for smooth animations scrolling down the site.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4">
+                        <div class="os-animation" data-animation="fadeInLeft">
+                            <div class="feature">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fa fa-circle"></i>
+                                    <i class="fas fa-angle-double-down fa-inverse" data-fa-transform="shrink-5.5 down-.3"></i>
+                                </span>
+                                <h3>Parallax Scrolling</h3>
+                                <p>Fixed background images allow the theme to have content-filled parallax scrolling sections.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4">
+                        <div class="os-animation" data-animation="fadeInUp">
+                            <div class="feature">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fa fa-circle"></i>
+                                    <i class="fas fa-sliders-h fa-inverse" data-fa-transform="shrink-8.5 right-.2"></i>
+                                </span>
+                                <h3>Content Slider</h3>
+                                <p>Owl.Carousel.js makes navigating content sliders seamless with it's content carousel navigation.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4">
+                        <div class="os-animation" data-animation="fadeInRight">
+                            <div class="feature">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fa fa-circle"></i>
+                                    <i class="fab fa-wpforms fa-inverse" data-fa-transform="grow-6"></i>
+                                </span>
+                                <h3>Contact Form</h3>
+                                <p>The Bootsrap HTML form will send directly to your email address using PHPMailer.php.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
 
