add fixed background in feature section

--- a/index.html
+++ b/index.html
@@ -197,6 +197,55 @@
             </div>
         </div>
 
+        <div class="fixed-background">
+            <div class="row dark">
+                <div class="col-12 os-animation" data-animation="fadeInUp">
+                    <h3 class="heading">Built With Care</h3>
+                    <div class="heading-underline"></div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="os-animation" data-animation="fadeInLeft">
+                        <h3>HTML 5</h3>
+                        <div class="feature">
+                            <span class="fa-layers fa-3x">
+                                <i class="fas fa-code"></i>
+                            </span>
+                        </div>
+                        <p class="lead">Built with the latest, HTML 5.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="os-animation" data-animation="fadeInUp">
+                        <h3>Bootstrap 4</h3>
+                        <div class="feature">
+                            <span class="fa-layers fa-3x">
+                                <i class="fas fa-bold"></i>
+                            </span>
+                        </div>
+                        <p class="lead">Built with the latest, Bootstrap 4.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="os-animation" data-animation="fadeInRight">
+                        <h3>CSS 3</h3>
+                        <div class="feature">
+                            <span class="fa-layers fa-3x">
+                                <i class="fab fa-css3"></i>
+                            </span>
+                        </div>
+                        <p class="lead">Built with the latest, CSS 3.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="fixed-wrap">
+                <div id="fixed"></div>
+            </div>
+        </div>
+
     </div>
     <!-- End Features Section -->
 
