--- a/index.html
+++ b/index.html
@@ -252,6 +252,31 @@
     <!-- Start Portfolio Section -->
     <div id="portfolio" class="offset">
 
+        <div class="row padding">
+
+            <div class="col-12 os-animation" data-animation="fadeInUp">
+                <h3 class="heading">Portfolio</h3>
+                <div class="heading-underline"></div>
+            </div>
+
+        </div>
+
+        <div class="container-fluid">
+            <div class="row no-padding">
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInLeft" data-delay=".2s">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/1.png" data-lightbox="example-set" data-title="My Portfolio Image Description">
+                                <img class="example-image" src="img/portfolio/1.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
     <!-- End Portfolio Section -->
 
