finish portfolio section

--- a/index.html
+++ b/index.html
@@ -274,6 +274,85 @@
                     </div>
                 </div>
 
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInLeft" data-delay=".2s">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/2.png" data-lightbox="example-set">
+                                <img class="example-image" src="img/portfolio/2.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInRight">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/3.png" data-lightbox="example-set">
+                                <img class="example-image" src="img/portfolio/3.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInRight" data-delay=".2s">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/4.png" data-lightbox="example-set">
+                                <img class="example-image" src="img/portfolio/4.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInLeft" data-delay=".2s">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/5.png" data-lightbox="example-set">
+                                <img class="example-image" src="img/portfolio/5.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInLeft">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/6.png" data-lightbox="example-set">
+                                <img class="example-image" src="img/portfolio/6.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInRight">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/7.png" data-lightbox="example-set">
+                                <img class="example-image" src="img/portfolio/7.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="os-animation" data-animation="bounceInRight" data-delay=".2s">
+                        <div class="portfolio-item">
+                            <a href="img/portfolio/8.png" data-lightbox="example-set">
+                                <img class="example-image" src="img/portfolio/8.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="os-animation" data-animation="fadeInUp">
+            <div class="narrow text-center">
+                <div class="col-12">
+                    <p class="lead">Get in contact with us to see more of our great portfolio design work in addition to web development projects such as websites, apps and more!</p>
+                    <a class="btn btn-secondary btn-sm" href="#contact">Get In Touch</a>
+                </div>
             </div>
         </div>
 
