finish style portfolio section

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-3">
-                    <div class="os-animation" data-animation="bounceInLeft" data-delay=".2s">
+                    <div class="os-animation" data-animation="bounceInLeft">
                         <div class="portfolio-item">
                             <a href="img/portfolio/2.png" data-lightbox="example-set">
                                 <img class="example-image" src="img/portfolio/2.png" alt="">
