--- a/index.html
+++ b/index.html
@@ -432,6 +432,82 @@
     <!-- Start Team Section -->
     <div id="team" class="offset">
 
+        <div id="fixed-background">
+
+            <div class="row light">
+
+                <div class="col-12 os-animation" data-animation="fadeInUp">
+                    <h3 class="heading">Meet the Team</h3>
+                    <div class="heading-underline"></div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="os-animation" data-animation="fadeInUp">
+                        <div id="team-slider" class="owl-carousel owl-theme">
+                            <div class="card text-center">
+                                <img src="img/team/team1.png" alt="" class="card-img-top">
+                                <div class="card-body">
+                                    <h4>John Lee</h4>
+                                    <h5>CEO</h5>
+                                    <p>John is an entrepreneur with almost 20 years of experience.</p>
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="card text-center">
+                                <img src="img/team/team2.png" alt="" class="card-img-top">
+                                <div class="card-body">
+                                    <h4>Jessica Miller</h4>
+                                    <h5>President</h5>
+                                    <p>John has over 10 years of experience in a technology role.</p>
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="card text-center">
+                                <img src="img/team/team3.png" alt="" class="card-img-top">
+                                <div class="card-body">
+                                    <h4>Charles Davis</h4>
+                                    <h5>Vice President</h5>
+                                    <p>Charles went to business school and worked his way up the ladder.</p>
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="card text-center">
+                                <img src="img/team/team4.png" alt="" class="card-img-top">
+                                <div class="card-body">
+                                    <h4>Cindy Wilson</h4>
+                                    <h5>CFO</h5>
+                                    <p>Cindy has an established financial operations background.</p>
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="fixed-wrap">
+                <div id="fixed-2"></div>
+            </div>
+
+        </div>
+
     </div>
     <!-- End Team Section -->
 
