style team section

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <!-- Start Team Section -->
     <div id="team" class="offset">
 
-        <div id="fixed-background">
+        <div class="fixed-background">
 
             <div class="row light">
 
@@ -500,10 +500,10 @@
                     </div>
                 </div>
 
-            </div>
+                <div class="fixed-wrap">
+                    <div id="fixed-2"></div>
+                </div>
 
-            <div class="fixed-wrap">
-                <div id="fixed-2"></div>
             </div>
 
         </div>
