--- a/index.html
+++ b/index.html
@@ -514,6 +514,70 @@
     <!-- Start Skills Section -->
     <div id="skills" class="offset">
 
+        <div class="jumbotron">
+            <div class="narrow">
+
+                <div class="col-12 os-animation" data-animation="fadeInUp">
+                    <h3 class="heading">Our Skills</h3>
+                    <div class="heading-underline"></div>
+                </div>
+
+                <div class="os-animation" data-animation="fadeInUp">
+                    <div class="row text-center">
+
+                        <div class="col-sm-6 col-md-3">
+                            <div class="skill">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fas fa-clock"></i>
+                                </span>
+                                <h3><span class="counter">457</span></h3>
+                                <p>Class Minutes</p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-3">
+                            <div class="skill">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fab fa-codepen"></i>
+                                </span>
+                                <h3><span class="counter">199</span></h3>
+                                <p>Web Dev Files</p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-3">
+                            <div class="skill">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fas fa-users"></i>
+                                </span>
+                                <h3><span class="counter">365</span></h3>
+                                <p>24/7 Support</p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-3">
+                            <div class="skill">
+                                <span class="fa-layers fa-4x">
+                                    <i class="fas fa-cloud-download-alt"></i>
+                                </span>
+                                <h3><span class="counter">101</span></h3>
+                                <p>Resources</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="os-animation" data-animation="fadeInUp">
+                    <div class="col-12 text-center">
+                        <p class="lead">Want to learn more about our design and development skills?</p>
+                        <a class="btn btn-turquoise btn-sm" href="#contact">Contact Us</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
     <!-- End Skills Section -->
 
