add tyle and animation to skills section

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                         <div class="col-sm-6 col-md-3">
                             <div class="skill">
                                 <span class="fa-layers fa-4x">
-                                    <i class="fas fa-users"></i>
+                                    <i class="fas fa-users" data-fa-transform="left-2"></i>
                                 </span>
                                 <h3><span class="counter">365</span></h3>
                                 <p>24/7 Support</p>
@@ -558,7 +558,7 @@
                         <div class="col-sm-6 col-md-3">
                             <div class="skill">
                                 <span class="fa-layers fa-4x">
-                                    <i class="fas fa-cloud-download-alt"></i>
+                                    <i class="fas fa-cloud-download-alt" data-fa-transform="left-2"></i>
                                 </span>
                                 <h3><span class="counter">101</span></h3>
                                 <p>Resources</p>
@@ -569,9 +569,11 @@
                 </div>
 
                 <div class="os-animation" data-animation="fadeInUp">
-                    <div class="col-12 text-center">
-                        <p class="lead">Want to learn more about our design and development skills?</p>
-                        <a class="btn btn-turquoise btn-sm" href="#contact">Contact Us</a>
+                    <div class="narrow text-center">
+                        <div class="col-12">
+                            <p class="lead">Want to learn more about our design and development skills?</p>
+                            <a class="btn btn-turquoise btn-sm" href="#contact">Contact Us</a>
+                        </div>
                     </div>
                 </div>
 
