add clients section

--- a/index.html
+++ b/index.html
@@ -586,6 +586,39 @@
     <!-- Start Clients Section -->
     <div id="clients" class="offset">
 
+        <div class="container-fluid">
+            <div class="row padding">
+
+                <div class="col-12 os-animation" data-animation="fadeInUp">
+                    <h3 class="heading">Our Clients</h3>
+                    <div class="heading-underline"></div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="os-animation" data-animation="fadeInUp">
+                        <div id="clients-slider" class="owl-carousel owl-theme">
+
+                            <div class="row clients">
+                                <div class="col-md-4">
+                                    <img src="img/clients/client1.png" alt="">
+                                </div>
+                                <div class="col-md-8">
+                                    <blockquote>
+                                        <i class="fas fa-quote-left"></i>
+                                        I see Nuno support as more of a partner to my company than a resource. I can pick up the phone and talk to anyone at any time and the way that they interact with us as a business makes it really simple.
+                                        <hr class="clients-hr">
+                                        <cite>&#8212; Eric, Small Business Owner</cite>
+                                    </blockquote>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
     <!-- End Clients Section -->
 
