style scetion clients

--- a/index.html
+++ b/index.html
@@ -612,6 +612,34 @@
                                 </div>
                             </div>
 
+                            <div class="row clients">
+                                <div class="col-md-4">
+                                    <img src="img/clients/client2.png" alt="">
+                                </div>
+                                <div class="col-md-8">
+                                    <blockquote>
+                                        <i class="fas fa-quote-left"></i>
+                                        The great thing about Nuno is it's not just a design, it's a responsive Bootstrap theme with animation. Nuno's layout is seamless the smooth parallax scrolling and a pop-up portfolio section for my images.
+                                        <hr class="clients-hr">
+                                        <cite>&#8212; Rachel, Professional Photographer</cite>
+                                    </blockquote>
+                                </div>
+                            </div>
+
+                            <div class="row clients">
+                                <div class="col-md-4">
+                                    <img src="img/clients/client3.png" alt="">
+                                </div>
+                                <div class="col-md-8">
+                                    <blockquote>
+                                        <i class="fas fa-quote-left"></i>
+                                        This theme is fantastic!  It has all of the great website elements found throughout professional templates.  I've learned a lot through developing and designing it while adding my own touches to the design.
+                                        <hr class="clients-hr">
+                                        <cite>&#8212; Ricky, Aspiring Developer</cite>
+                                    </blockquote>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
