add footer section

--- a/index.html
+++ b/index.html
@@ -653,9 +653,27 @@
     <!-- Start Contact Section -->
     <div id="contact" class="offset">
 
+        <div class="row">
+
+            <div class="col-md-5">
+                <img src="img/nuno.png" alt="">
+                <p>At our core is a collection of design and development solutions that represent everything your business needs to compete in the modern marketplace.</p>
+                <strong>Our Location</strong>
+                <p>100 Street Name<br>Our City, AA 10000</p>
+                <strong>Contact Info</strong>
+                <p>(888) 888-8888<br>email@nuno.com</p>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-reddit-square"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+            </div>
+
+        </div>
+
     </div>
     <!-- End Contact Section -->
-    <br><br><br><br><br><br><br><br><br><br><br>
+
     <!-- Scripts start -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
