--- a/index.html
+++ b/index.html
@@ -709,6 +709,12 @@
     </div>
     <!-- End Contact Section -->
 
+    <!-- Top Scroll -->
+    <a href="#home" class="top-scroll">
+        <i class="fas fa-angle-up"></i>
+    </a>
+    <!--End Top Scroll -->
+
     <!-- Scripts start -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
